Fixed the width of the HTML page, aligning the locale switcher to the right in Firefox.

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -2,7 +2,11 @@
 	margin: 0;
 }
 
-html, body	{
+html	{
+	height: 100%;
+}
+
+body	{
 	color: #333333;
 	font-family: serif;
 	width: 700px;
